style(bna-widget-table): changed fonts and fix overlapping table content style(bna-widget-table): removed buttons and added context menu

--- a/src/app/components/widget-notification-bar/widget-notification-bar.component.css
+++ b/src/app/components/widget-notification-bar/widget-notification-bar.component.css
@@ -1,4 +1,5 @@
 .widget-notification-alert {
+  font-size: 13px;
   position: absolute;
   z-index: 101;
   top: -20px;
