--- a/src/app/pages/bna-widget/bna-widget.component.css
+++ b/src/app/pages/bna-widget/bna-widget.component.css
@@ -18,14 +18,22 @@
   background-color: transparent;
   border: none;
 }
+
 .table-cell-data {
   font-size: 13px !important;
   padding: 0.2rem !important;
+  height: auto !important;
 }
 
 .table-header-cell {
   font-size: 13px;
 }
+
+.custom-text-area {
+  width: 100% !important;
+  padding: 8px 5px !important;
+}
+
 inActiveItem {
   pointer-events: none;
   border: none;
